<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_amount"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_date"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_method"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewNumberOfRoommates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_number_of_roommates"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewRecurringPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_recurring_payment"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewRecurringPaymentFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_recurring_payment_frequency"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewPaymentType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_payment_type"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="#2CABCD"
        android:text="Delete"
        android:textColor="#311B92" />


</LinearLayout>
